bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value False
var fini:Boolean=False
                 ^BDR:41: error: not found: value True
    fini=True
         ^